--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,121 +2,159 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
-    tools:context=".Login"
+    tools:context=".LoginActivity"
     android:orientation="vertical"
+    android:layout_gravity="center_horizontal"
     android:background="#fff"
-    android:padding="20dp"
-
     >
+
+    <ImageView
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="50dp"
+        app:srcCompat="@drawable/revengerslogo" />
+
 
     <TextView
         android:id="@+id/hello"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingTop="30dp"
-        android:text="Welcome! :D"
-        android:textColor="#909"
+        android:layout_height="42dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="50dp"
+        android:paddingTop="0dp"
+        android:text="Welcome back"
+        android:textColor="@color/bluepurple_regen"
         android:textSize="22sp" />
 
-    <TextView
-        android:id="@+id/signUpTxt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Sign In to continue"
-        android:textSize="16sp" />
 
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="350dp"
         android:layout_height="match_parent"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical">
 
         //username
+
         <com.google.android.material.textfield.TextInputLayout
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:id="@+id/username"
-            android:hint="Username"
+            android:id="@+id/email1"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            >
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Email"
+            app:boxCornerRadiusBottomEnd="15dp"
+            app:boxCornerRadiusBottomStart="15dp"
+            app:boxCornerRadiusTopEnd="15dp"
+            app:boxCornerRadiusTopStart="15dp">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-
-
+                android:layout_height="wrap_content" />
 
 
         </com.google.android.material.textfield.TextInputLayout>
 
         //password
+
         <com.google.android.material.textfield.TextInputLayout
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
             android:id="@+id/password"
-            android:hint="Password"
-            app:passwordToggleEnabled="true"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            >
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Password"
+            app:boxCornerRadiusBottomEnd="15dp"
+            app:boxCornerRadiusBottomStart="15dp"
+            app:boxCornerRadiusTopEnd="15dp"
+            app:boxCornerRadiusTopStart="15dp"
+            app:passwordToggleEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPassword"/>
-
-
+                android:inputType="textPassword" />
 
 
         </com.google.android.material.textfield.TextInputLayout>
-
 
 
         <CheckBox
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:elevation="0dp"
             android:background="#fff"
-            android:textColor="#909"
+            android:elevation="0dp"
             android:text="Remember me"
-            />
+            android:textColor="@android:color/holo_green_light" />
 
         <Button
             android:id="@+id/logInBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="0dp"
             android:layout_marginBottom="5dp"
-            android:layout_gravity="center"
-            android:background="#909"
+            android:background="#A56EA5"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
             android:text="Log In"
-            android:textColor="#fff" />
+            android:textColor="#fff"
+            android:textSize="18sp"
+            app:cornerRadius="15dp" />
 
-        <Button
-            android:id="@+id/signUpBtn2"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:text="Sign Up!"
-            android:layout_gravity="center"
-            android:elevation="0dp"
-            android:background="#fff"
-            android:textColor="#909"
-            android:layout_marginTop="5dp"/>
+        //signIn with Social Media
 
-        <Button
-            android:layout_width="200dp"
+        <TextView
+            android:id="@+id/forgotPas"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="105dp"
-            android:background="#C1C0C1"
-            android:elevation="0dp"
-            android:text="Forgot your password?"
-            android:textColor="#fff" />
+
+            android:gravity="right"
+            android:paddingTop="10dp"
+            android:text="Forgot Password?"
+            android:textColor="@color/bluepurple_regen"
+            android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/orSign"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="30dp"
+                android:text="or sign in with"
+                android:textSize="16sp" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="10dp"
+                >
+
+                <ImageView
+
+                    android:layout_width="40dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="10dp"
+                    app:srcCompat="@drawable/google" />
+
+                <ImageView
+                    android:layout_width="35dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginHorizontal="10dp"
+                    app:srcCompat="@drawable/facebook" />
+
+            </LinearLayout>
+
+
+
+
+
     </LinearLayout>
 
 
