Fixed the Expandable list. (By removing it and putting a recyclerView in it's place, lol)

--- a/app/src/main/res/layout/holder_item_view_desc.xml
+++ b/app/src/main/res/layout/holder_item_view_desc.xml
@@ -9,11 +9,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/default_padding"
+        android:layout_marginBottom="@dimen/minimum_size"
         android:text=""
         android:textColor="@color/black"
         android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
