--- a/app/src/main/res/layout/holder_list_item.xml
+++ b/app/src/main/res/layout/holder_list_item.xml
@@ -10,6 +10,7 @@
         android:layout_width="65dp"
         android:layout_height="65dp"
         android:src="@mipmap/ic_launcher"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
