--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,25 +2,30 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="350dp"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:layout_gravity="center_horizontal"
+    android:layout_marginHorizontal="20dp">
 
 <!-- Change whatever you don't like -->
 
     <ImageView
         android:id="@+id/RevengersLogo"
         android:layout_width="wrap_content"
-        android:layout_height="240dp"
+        android:layout_height="200dp"
         android:src="@drawable/revengerslogo"
         app:layout_constraintBottom_toTopOf="@id/ListButton"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed"/>
+        app:layout_constraintVertical_chainStyle="packed" />
 
     <com.google.android.material.button.MaterialButton
+        android:textSize="0dp"
         android:id="@+id/ListButton"
+        android:visibility="invisible"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/default_padding"
@@ -32,6 +37,7 @@
         app:layout_constraintTop_toBottomOf="@id/RevengersLogo" />
 
     <TextView
+        android:visibility="invisible"
         android:id="@+id/or"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -45,14 +51,18 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/logInBtn"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:text="@string/small_Login"
+        android:text="Log In"
+        android:padding="10dp"
+        app:cornerRadius="15dp"
+        android:textSize="18sp"
         android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/or" />
+
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/signUpBtn"
@@ -62,12 +72,65 @@
         android:text="Don't you have an account? Sign Up!"
         android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/logInBtn" />
+        app:layout_constraintTop_toBottomOf="@+id/logInBtn"
+        app:layout_constraintVertical_bias="0.142" />
+
+    <TextView
+        android:id="@+id/orSign"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:paddingBottom="50dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/signUpBtn"
+        android:text="or sign in with"
+        android:textSize="16sp" />
+
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginVertical="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/orSign"
+        android:paddingBottom="55dp"
+        >
+
+
+
+        <ImageView
+            android:id="@+id/facebookImg"
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:layout_marginHorizontal="10dp"
+            app:srcCompat="@drawable/facebook" />
+
+        <ImageView
+
+            android:id="@+id/googleImg"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginHorizontal="10dp"
+            app:srcCompat="@drawable/google" />
+
+
+
+
+    </LinearLayout>
+
 
 
     <com.google.android.material.button.MaterialButton
+        android:visibility="invisible"
         android:id="@+id/homePageBtn"
         style="@style/Widget.MaterialComponents.Button.TextButton"
         android:layout_width="wrap_content"
